--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,8 +1,15 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_add_note"
-        android:title="@string/add_note"/>
+        android:title="@string/add_note"
+        app:showAsAction="never" />
     <item
         android:id="@+id/action_delete_note"
-        android:title="@string/delete_note"/>
+        android:title="@string/delete_note"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_choose_storage"
+        android:title="@string/storage_select_title"
+        app:showAsAction="never" />
 </menu>
